# rust-demo

./: Cargo.toml
resource/: a.txt
src/: main.rs
