[package]
name = "rust-demo"
version = "0.1.0"
authors = ["xiejinhua"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
systemstat = "https://github.com/unrelentingtech/systemstat"

[dependencies]
systemstat = "0.1.7"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.4.0", features = ["full"] }
http = "0.2"
hyper = "0.14.5"
futures = "0.3.13"